update button tinh tien

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <div class="wrap-contact100-form-btn">
             <div class="contact100-form-bgbtn"></div>
-            <button type="button" class="contact100-form-btn" data-toggle="modal" data-target="#exampleModal">IN HÓA ĐƠN</button>
+            <button type="button" class="contact100-form-btn">IN HÓA ĐƠN</button>
           </div>
         </form>
 
